<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_v1"
        android:layout_width="293dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/txt_v1"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_v2"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txt_v2"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_v1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="343dp"
        android:layout_height="212dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_v2">

        <RadioButton
            android:id="@+id/rb_sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sumar" />

        <RadioButton
            android:id="@+id/rb_restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_restar" />

        <RadioButton
            android:id="@+id/rb_multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_multiplicar" />

        <RadioButton
            android:id="@+id/rb_dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_dividir" />

    </RadioGroup>

    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="Calcular"
        android:text="Calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="254dp"
        android:layout_height="47dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_resultado"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button" />
</androidx.constraintlayout.widget.ConstraintLayout>